--- a/scfchapter6/config-server/src/main/resources/application.properties
+++ b/scfchapter6/config-server/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.port=8888
 spring.application.name=config-server
+spring.cloud.config.server.git.uri=https://github.com/maolixian/SpringCloudConfig
+spring.cloud.config.server.git.search-paths=respo
+spring.cloud.config.label=master
+spring.cloud.config.server.git.username=
+spring.cloud.config.server.git.password=
