--- a/scfchapter6/config-client/src/main/resources/application.properties
+++ b/scfchapter6/config-client/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.cloud.config.profile=dev
 eureka.client.service-url.defaultZone=http://localhost:8889/eureka
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=config-server
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+spring.cloud.bus.enabled=true
+spring.cloud.bus.trace.enabled=false
+management.endpoints.web.exposure.include=bus-refresh
